PEH-223 add Visit Result Sharing on the report

--- a/force-app/main/default/classes/VisitReportService.cls
+++ b/force-app/main/default/classes/VisitReportService.cls
@@ -10,7 +10,7 @@ public inherited sharing class VisitReportService {
         VisitResultsService visitResultsService = ((VisitResultsService) ClassFactory.newInstance(VisitResultsService.class));
         VisitResultMService visitResultMService = ((VisitResultMService) ClassFactory.newInstance(VisitResultMService.class));
         ParticipantService.ParticipantState pState = ((ParticipantService) ClassFactory.newInstance(ParticipantService.class)).getState();
-        if (!ParticipantService.ParticipantStates.ALUMNI.equals(pState.value) || pState.isDelegate) {
+        if (!ParticipantService.ParticipantStates.ALUMNI.equals(pState.value) || pState.isDelegate || !VisitResultSharingService.isVisitResultAvailable()) {
             return result;
         }
         List<Patient_Visit__c> patientVisits = visitResultsService.getPatientVisitsForReport();
@@ -31,7 +31,9 @@ public inherited sharing class VisitReportService {
         Map<String, VisitReportContainerRemote.ReportDataTableWrapper> result = new Map<String, VisitReportContainerRemote.ReportDataTableWrapper>();
         for (Patient_Visit__c patientVisit : patientVisits) {
             if (!patientVisit.Visit_Results__r.isEmpty()) {
-                Map<String, Visit_Result__c> visitResultsByResultType = this.getVisitResultMapByResultType(patientVisit.Visit_Results__r);
+                List<Visit_Result__c> visitResultsAvailable = VisitResultSharingService.getAvailableVisitResults(patientVisit.Visit_Results__r);
+                if (visitResultsAvailable.isEmpty()) continue;
+                Map<String, Visit_Result__c> visitResultsByResultType = this.getVisitResultMapByResultType(visitResultsAvailable);
                 for (Visit_Result_GroupM__mdt visitResultGroupM : visitResultGroupMS) {
                     Boolean isResult = false;
                     List<VisitReportContainerRemote.VisitDataWrapper> reportRowWrappers = new List<VisitReportContainerRemote.VisitDataWrapper>();
@@ -51,7 +53,7 @@ public inherited sharing class VisitReportService {
                             if (VisitReportService.VISIT_RECORD_TYPE_LABS.equalsIgnoreCase(visitResultGroupM.Visit_Results_Mode__c)) {
                                 reportHeaderWrappers.add(new VisitReportContainerRemote.VisitDataWrapper(visitResult));
                             } else {
-                                reportHeaderWrappers.add(new VisitReportContainerRemote.VisitDataWrapper(visitResultWrapper.visitResultTypeM.DeveloperName, visitResult.Measurement__c));
+                                reportHeaderWrappers.add(new VisitReportContainerRemote.VisitDataWrapper(visitResultWrapper.visitResultTypeM.DeveloperName));
                             }
                             Decimal rounded = visitResult.Actual_Value__c.setScale(2, RoundingMode.HALF_UP);
                             String value = String.valueOf(rounded);
