--- a/force-app/main/default/classes/VisitResultSharingService.cls
+++ b/force-app/main/default/classes/VisitResultSharingService.cls
@@ -6,11 +6,13 @@ public without sharing class VisitResultSharingService {
 
     private static ParticipantService.ParticipantState state;
     private static Boolean havePSE;
+    private static Map<String, Visit_Result_Type_Sharing__c> visitResultTypeSharingByType;
 
     static {
         if([SELECT Id, ContactId FROM User WHERE Id =: UserInfo.getUserId()].ContactId != null){
             state = ParticipantService.getParticipantState();
             havePSE = state.pse != null;
+            visitResultTypeSharingByType = new Map<String, Visit_Result_Type_Sharing__c>();
         }
     }
 
@@ -65,6 +67,41 @@ public without sharing class VisitResultSharingService {
         } catch (Exception e) {
             System.debug(e.getCause() + '\n' + e.getLineNumber());
             return filteredResults;
+        }
+    }
+
+    public static List<Visit_Result__c> getAvailableVisitResults(List<Visit_Result__c> visitResults) {
+        List<Visit_Result__c> filteredResults = new List<Visit_Result__c>();
+        if (!havePSE) return filteredResults;
+        try {
+            Clinical_Trial_Profile__c ctp = getCTP(state.ctp.Id);
+            if (!isVisitResultAvailable() || !state.pse.Participant_Contact__r.Visit_Results_Opt_In__c) return filteredResults;
+            String mailingCountryCode = state.pse.Participant__r.Mailing_Country_Code__c;
+            for (Visit_Result__c result : visitResults) {
+                if (result.Patient_Visit__r.Visit__r.Order__c <= ctp.Shareback_Availability_Timing__c) continue;
+                if (visitResultTypeSharingByType.isEmpty()) {
+                    VisitResultSharingService.getResultTypeSharingsByType(ctp.Visit_Result_Type_Sharings__r);
+                }
+                if (visitResultTypeSharingByType.containsKey(result.Result_Type__c)) {
+                    Visit_Result_Type_Sharing__c resultTypeSharing = visitResultTypeSharingByType.get(result.Result_Type__c);
+                    if (resultTypeSharing.Sharing_Countries__c == 'All' ||
+                            (resultTypeSharing.Include_Countries__c &&
+                                    resultTypeSharing.Sharing_Countries__c.contains(mailingCountryCode))
+                            ) {
+                        filteredResults.add(result);
+                    }
+                }
+            }
+            return filteredResults;
+        } catch (Exception e) {
+            System.debug(e.getCause() + '\n' + e.getLineNumber());
+            return filteredResults;
+        }
+    }
+
+    private static void getResultTypeSharingsByType(List<Visit_Result_Type_Sharing__c> visitResultTypeSharings) {
+        for (Visit_Result_Type_Sharing__c visitResultTypeSharing : visitResultTypeSharings) {
+            visitResultTypeSharingByType.put(visitResultTypeSharing.Type__c, visitResultTypeSharing);
         }
     }
 
