add Patient Portal Name on Visits

--- a/force-app/main/default/classes/VisitConfigurationRemote.cls
+++ b/force-app/main/default/classes/VisitConfigurationRemote.cls
@@ -13,7 +13,9 @@ public with sharing class VisitConfigurationRemote {
             ];
             if (String.isNotBlank(ctps[0].Visit_Plan__c)) {
                 return [
-                        SELECT Id,Name
+                        SELECT Id
+                                ,Patient_Portal_Name__c
+                                ,Name
                                 ,Visit_Plan__c
                                 ,Visit_Schedule__c
                                 ,Visit_Number__c
