change ordering field

--- a/force-app/main/default/classes/PatientVisitService.cls
+++ b/force-app/main/default/classes/PatientVisitService.cls
@@ -35,7 +35,7 @@ public inherited sharing class PatientVisitService {
                 'WHERE Visit__r.Visit_Plan__c = \'' + pState.ctp.Visit_Plan__c + '\'' +
                 ' AND Participant_Study_Enrollment__c = \'' + pState.pse.Id + '\'' +
                 ' AND Status__c ' + (VISIT_MODE_CURRENT == visitMode ? '=' : '!=') + '\'' + VISIT_STATUS_PENDING + '\'' +
-                ' ORDER BY Order__c' +
+                ' ORDER BY Visit__r.Visit_Number__c NULLS LAST' +
                 (limitNumber == null ? '' : ' LIMIT ' + limitNumber);
 
         List<Patient_Visit__c> visits = ((DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class)).query(visitsQuery, true);
