Fixed update patient info popup

--- a/force-app/main/default/classes/ParticipantService.cls
+++ b/force-app/main/default/classes/ParticipantService.cls
@@ -148,9 +148,10 @@ public class ParticipantService {
                 }
             }
         }*/
-
-        DuplicateContactController.isPERCreated = true;
-        participant = DuplicateContactController.communityReffering(participant, pe);
+        if(participant.Id == null){
+            DuplicateContactController.isPERCreated = true;
+            participant = DuplicateContactController.communityReffering(participant, pe);
+        }
 
         if (participant.Id != null) {
             pe.Participant__c = participant.Id;
