PEH-438 visit sharing and change text on fileds

--- a/force-app/main/default/classes/Test_VisitResultSharingService.cls
+++ b/force-app/main/default/classes/Test_VisitResultSharingService.cls
@@ -8,6 +8,8 @@ private class Test_VisitResultSharingService {
     static void processResultsTest() {
         TestData.loadTestData();
         TestData testData = new TestData();
+        testData.ctp.Shareback_Availability_Timing__c = 1;
+        update testData.ctp;
 
         Test.startTest();
         Visit_Result_Type_Sharing__c vrts = new Visit_Result_Type_Sharing__c(
@@ -24,32 +26,48 @@ private class Test_VisitResultSharingService {
         Visit_Plan__c vp = new Visit_Plan__c(Name = 'Test Plan');
         insert vp;
 
-        Visit__c visit = new Visit__c(
-                Order__c = 3,
-                Visit_Plan__c = vp.Id
-        );
-        insert visit;
+        List<Visit__c> visits = new List<Visit__c>();
+        visits.add(new Visit__c(Visit_Plan__c = vp.Id));
+        visits.add(new Visit__c(Visit_Plan__c = vp.Id));
+        insert visits;
 
         testData.createPSE();
-        Patient_Visit__c pv = new Patient_Visit__c(
+
+        List<Patient_Visit__c> patientVisits = new List<Patient_Visit__c>();
+        patientVisits.add(new Patient_Visit__c(
                 Participant_Study_Enrollment__c = testData.pse.Id,
-                Visit__c = visit.Id
-        );
-        insert pv;
+                Status__c = 'Completed',
+                Visit__c = visits.get(0).Id,
+                Visit_Number__c = 2
+        ));
+        patientVisits.add(new Patient_Visit__c(
+                Participant_Study_Enrollment__c = testData.pse.Id,
+                Status__c = 'Completed',
+                Visit__c = visits.get(1).Id,
+                Visit_Number__c = 3
+        ));
+        insert patientVisits;
 
-        Visit_Result__c vr = new Visit_Result__c(
-                Patient_Visit__c = pv.Id,
+        List<Visit_Result__c> visitResults = new List<Visit_Result__c>();
+        visitResults.add(new Visit_Result__c(
+                Actual_Value__c = 0.01,
+                Patient_Visit__c = patientVisits.get(0).Id,
                 Result_Type__c = 'Calcium'
-        );
-        insert vr;
+        ));
+        visitResults.add(new Visit_Result__c(
+                Actual_Value__c = 0.5,
+                Patient_Visit__c = patientVisits.get(1).Id,
+                Result_Type__c = 'Calcium'
+        ));
+        insert visitResults;
 
-        List<Visit_Result__c> visitResults;
-        System.runAs(testData.participantUser){
-            visitResults = VisitResultSharingService.processResults();
+        List<Visit_Result__c> filteredResults;
+        System.runAs(testData.participantUser) {
+            filteredResults = VisitResultSharingService.processResults();
         }
         Test.stopTest();
 
-        System.assertEquals(1, visitResults.size());
+        System.assertEquals(0.01, filteredResults.get(0).Actual_Value__c);
     }
 
     @IsTest
@@ -65,7 +83,9 @@ private class Test_VisitResultSharingService {
             VisitResultSharingService.getCTP(testData.ctp.Id);
             VisitResultSharingService.disableShareback(testData.ctp);
             VisitResultSharingService.getTypeVRSharingMap(testData.ctp);
-            VisitResultSharingService.updateStudySitesSharing(testData.ctp.Id, new List<String>{testData.ss.Id}, true);
+            VisitResultSharingService.updateStudySitesSharing(testData.ctp.Id, new List<String>{
+                    testData.ss.Id
+            }, true);
         }
 
         Test.stopTest();
